; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_glib-ext.c_g_string_equal_ci.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_glib-ext.c_g_string_equal_ci.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @g_string_equal_ci(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @g_string_equal(i32* %12, i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @TRUE, align 4
  store i32 %17, i32* %3, align 4
  br label %39

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @S(i32* %19)
  %21 = call i8* @g_utf8_casefold(i32 %20)
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @strlen(i8* %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @S(i32* %24)
  %26 = call i8* @g_utf8_casefold(i32 %25)
  store i8* %26, i8** %7, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i32 @strlen(i8* %27)
  store i32 %28, i32* %9, align 4
  %29 = load i8*, i8** %6, align 8
  %30 = load i32, i32* %8, align 4
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @strleq(i8* %29, i32 %30, i8* %31, i32 %32)
  store i32 %33, i32* %10, align 4
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @g_free(i8* %34)
  %36 = load i8*, i8** %7, align 8
  %37 = call i32 @g_free(i8* %36)
  %38 = load i32, i32* %10, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %18, %16
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i64 @g_string_equal(i32*, i32*) #1

declare dso_local i8* @g_utf8_casefold(i32) #1

declare dso_local i32 @S(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strleq(i8*, i32, i8*, i32) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
